<resources>
    <string name="app_name">Petdoc</string>
    <string name="google_map_api_key">AIzaSyApWBYrkBBVhZMv0K3RjuWE8TP1s1a8aCs</string>
    <string name="kakao_app_key">263bb955f5d310936b1adaccbbfc2d88</string>
    <string name="facebook_app_id">1429231817399783</string>
    <string name="fb_login_protocol_scheme">fb1429231817399783</string>
    <string name="title_list">List</string>
    <string name="title_upload">Upload</string>
    <string name="title_about">About</string>
    <string name="error_no_internet">Check your internet connection and try again.</string>
    <string name="error_server_problem">Server issue occurred, please try again.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_image_processing">Error during processing.</string>
    <string name="error_invalid_image">Image is invalid.</string>
    <string name="str_file_not_found">File is not created</string>
    <string name="str_allow_permission_for_image">Please allow permission to take Image.</string>
    <string name="str_allow_permission_from_setting">Please allow permission from Application setting.</string>
    <string name="str_ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_plz_select_img">Please select Image to upload.</string>
    <string name="api_image_list">image_list.php</string>
    <string name="api_upload">upload.php</string>
    <string name="api_error">error_api</string>
    <string name="api_image_list_mock">image_list</string>
    <string name="api_upload_mock">upload</string>
    <string name="api_error_mock">error_api</string>
    <string name="copyright_message">Copyrights 2019 © Petdoc corp.</string>
    <string name="permission_guide_title">앱 접근 권한 안내</string>
    <string name="permission_guide_subtitle">편리한 앱 이용을 위해 다음 권한들을 사용하오니 확인 부탁드립니다.</string>
    <string name="permission_guide_tail">선택적 접근 권한은 해당 기능을 사용할 때 허용이 필요하며, 허용하지 않아도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="legacy_permission">필수적 앱 접근 권한</string>
    <string name="legacy_title">기기 및 앱 기록</string>
    <string name="legacy_sub_title">앱 상태(버전) 확인</string>
    <string name="choice_permission_title">선택적 접근 권한</string>
    <string name="permission_camera_text1">사진,카메라</string>
    <string name="permission_camera_text2">글 작성 시 사진 또는 촬영</string>
    <string name="permission_location_text1">내 위치</string>
    <string name="permission_location_text2">내 주변 병원 찾기</string>
    <string name="permission_call_text1">전화</string>
    <string name="permission_call_text2">병원 전화 문의</string>
    <string name="permission_noti_text1">알림</string>
    <string name="permission_noti_text2">상담 채팅, 병원 예약 상태 및 마케팅 알림</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="user_guide_1_title">상담하세요!</string>
    <string name="user_guide_1_content">병원에 갈지 말 지 고민될 때,\n갑자기 아이가 이상한 행동을 할 때!</string>
    <string name="user_guide_2_title">검색하세요!</string>
    <string name="user_guide_2_content">다른 보호자의 상담 내역 열람,\n반려백과 검색까지! 수의사가 참여한\n전문성 있는 컨텐츠를 검색해보세요!</string>
    <string name="user_guide_3_title">펫톡하세요!</string>
    <string name="user_guide_3_content">귀여운 우리 아이 자랑\n수의사가 알려주는 반려동물 지식\n고민상담은 물론 나눔, 중고거래까지!</string>
    <string name="user_guide_4_title">케어하세요!</string>
    <string name="user_guide_4_content">우리 아이 접종 시기 관리부터\n배변 체크까지 기록하면 할수록\n푸짐한 혜택이!</string>
    <string name="user_guide_5_title">쇼핑하세요!</string>
    <string name="user_guide_5_content">펫닥이 꼼꼼이 검수한 안전한 제품\n게릴라 세일은 덤!</string>
    <string name="user_guide_start">시작하기</string>
    <string name="login_greeting_message">안녕하세요 고객님,\n내 손안에 수의사 펫닥입니다.</string>
    <string name="email">E-mail</string>
    <string name="nickName">Nickname</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="password_kr">비밀번호</string>
    <string name="password_confirm_kr">비밀번호 확인</string>
    <string name="phone_number">Phone number</string>
    <string name="sample_email">hello@petdoc.co.kr</string>
    <string name="sample_password">영문, 숫자 조합 8자리 이상입니다.</string>
    <string name="sample_password_confirm">비밀번호를 다시 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="find_password">아이디/비밀번호 찾기</string>
    <string name="sign_up_email">이메일로 회원가입</string>
    <string name="last_social_login_1">마지막 로그인 계정</string>
    <string name="last_social_login_2">입니다.</string>
    <string name="google_account">구글 계정</string>
    <string name="naver_account">네이버 계정</string>
    <string name="facebook_account">페이스북 계정</string>
    <string name="kakao_account">카카오 계정</string>
    <string name="apple_account">애플 계정</string>
    <string name="email_account">이메일 계정</string>
    <string name="policy_term_title">약관동의</string>
    <string name="policy_term_check_content_title">서비스 이용을 위해\n고객님의 동의가 필요합니다.</string>
    <string name="policy_term_check_content_text">펫닥에서는 서비스 이용약관과 개인정보 보호정책 그리고 위치 기반 서비스에 대한 이용동의를 필수로 수집하고 있습니다. 아래 동의 버튼을 누르시면 다음 사항들에 대해 동의하신 것으로 인정됩니다.</string>
    <string name="policy_term">펫닥 통합 이용약관</string>
    <string name="policy_private_info">개인정보 수집 및 이용정책</string>
    <string name="policy_marketing">마케팅 동의방침</string>
    <string name="policy_location">제3자 정보제공동의</string>
    <string name="policy_open_data">병원예약 제3자 정보제공동의</string>
    <string name="policy_link_all_text">펫닥 통합 이용약관, 개인정보 수집 및 이용정책, 제3자 정보제공동의</string>
    <string name="sign_up_by_email_guide_text">한 번의 가입으로 펫닥에서 제공하는 모든 서비스와 펫닥 제휴 동물병원 서비스를 편리하게 이용하실 수 있습니다.</string>
    <string name="sign_up_by_email_hint1">이메일을 입력해 주세요.</string>
    <string name="sign_up_by_email_hint2">영문, 숫자, 특수 조합 8~16자리.</string>
    <string name="sign_up_by_email_hint3">비밀번호를 다시 입력해주세요.</string>
    <string name="sign_up_by_email_hint4">휴대폰 번호를 입력해주세요.</string>
    <string name="sign_up_by_email_hint5">닉네임을 입력해주세요.</string>
    <string name="sign_up_by_email_wrong_pattern1">이메일 형식이 아닙니다.</string>
    <string name="sign_up_by_email_wrong_pattern2">비밀번호 형식에 맞게 입력해주세요.</string>
    <string name="sign_up_by_email_wrong_pattern3">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_sns_extra_info_title">SNS 가입정보 입력</string>
    <string name="find_password_by_email">비밀번호 재설정</string>
    <string name="find_password_by_email_guide">비밀번호를 잊으셨나요?\n계정을 찾으려면 이메일을 입력하세요.</string>
    <string name="send">전송</string>
    <string name="authorize_code">인증코드</string>
    <string name="change">변경</string>
    <string name="authorize">인증</string>
    <string name="authorize_done">인증완료</string>
    <string name="save">저장하기</string>
    <string name="password_change">비밀번호 재설정</string>
    <string name="name">이름</string>
    <string name="email_kr">이메일</string>
    <string name="gender">성별</string>
    <string name="birthday">생년월일</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="phone_number_kr">휴대폰 번호</string>
    <string name="confirm">확인</string>
    <string name="confirm_self">본인 확인</string>
    <string name="confirm_self_complete">가입 완료</string>
    <string name="cancel">취소</string>
    <string name="allow">동의</string>
    <string name="complete">완료</string>
    <string name="mypage">마이페이지</string>
    <string name="information_change">정보변경</string>
    <string name="mypet_information">반려동물 정보</string>
    <string name="mypet_history">예약내역</string>
    <string name="profile_image_choose">프로필 사진(선택)</string>
    <string name="bookmark">북마크</string>
    <string name="couponbox">쿠폰함</string>
    <string name="petpoint">펫 포인트</string>
    <string name="mystory">내 게시글</string>
    <string name="ask1on1">1:1문의</string>
    <string name="notice">공지사항</string>
    <string name="setting">설정</string>
    <string name="my_album">내 사진앨범</string>
    <string name="my_album_detail">자세히 보기</string>
    <string name="scanner_ear_image">사진보기</string>
    <string name="external_device">연결 디바이스 관리</string>
    <string name="customer_report">앱 불편사항 접수</string>
    <string name="nickname">닉네임</string>
    <string name="nicknamehint">닉네임을 8자 이내로 입력해주세요</string>
    <string name="emailid">이메일 아이디</string>
    <string name="emailhint">hello@petdoc.co.kr</string>
    <string name="mail_re_send">인증메일 재발송</string>
    <string name="mail_confirm_guide">이메일 인증 시 펫포인트 1,000점이 적립됩니다.</string>
    <string name="privacy_data_period">개인정보 유효기간 설정</string>
    <string name="period_1">1년</string>
    <string name="period_3">3년</string>
    <string name="period_5">5년</string>
    <string name="period_forever">탈퇴 시</string>
    <string name="weight">체중</string>
    <string name="body">체형</string>
    <string name="activity">산책시간</string>
    <string name="allerge">알러지/싫어하는 주재료</string>
    <string name="likefood">좋아하는 주재료</string>
    <string name="current_feeding">현재 급여 사료</string>
    <string name="sickness">앓고있거나 걱정되는 질병</string>
    <string name="pregnant">임신 여부</string>
    <string name="detail_diagnosis">정밀진단</string>
    <string name="pet_weight_sub_text"> 체중을\n알려주세요.</string>
    <string name="pet_body_sub_text"> 체형은\n어느정도 인가요?</string>
    <string name="kg">kg</string>
    <string name="body_level_1_title">매우 마름</string>
    <string name="body_level_1_text">갈비뼈와 골반뼈를 멀리서도 육안으로 확인할 수 있어요. 위에서 보면 허리 부분이 심각하게 말라있어요.</string>
    <string name="body_level_2_title">마름</string>
    <string name="body_level_2_text">지방층이 없고 갈비뼈가 쉽게 만져져요. 허리 뼈의 가시돌기와 골반뼈가 돌출되기 시작해요.</string>
    <string name="body_level_3_title">적정</string>
    <string name="body_level_3_text">위에서 봤을 때 허리선을 확인할 수 있어요.</string>
    <string name="body_level_4_title">과체중</string>
    <string name="body_level_4_text">지방이 많아서 갈비뼈가 잘 만져지지 않아요. 위에서 봤을 때 허리선을 거의 구별할 수 없어요.</string>
    <string name="body_level_5_title">비만</string>
    <string name="body_level_5_text">꼬리 아랫 부분이 매우 두꺼워져요. 위에서 봤을 때 허리선을 거의 구별할 수 없어요.</string>
    <string name="hour">시간</string>
    <string name="walking_guide_title">일주일에 산책은\n몇 시간 정도 하나요?</string>
    <string name="food_allerge_sub_guide"> 알러지가 있거나 싫어하는\n주재료가 있으면 알려주세요.</string>
    <string name="food_allerge_multi_text">※ 중복 선택 가능</string>
    <string name="food_like_sub_guide"> 좋아하는\n 주재료는 무엇인가요?</string>
    <string name="food_type_chicken">닭고기</string>
    <string name="food_type_duck">오리고기</string>
    <string name="food_type_beef">소고기</string>
    <string name="food_type_fish">연어&amp;참치</string>
    <string name="food_type_meat_and_fish">미트&amp;피쉬</string>
    <string name="food_type_sheep">양고기</string>
    <string name="food_type_allerge">알러지가없어요</string>
    <string name="food_type_all">다 좋아해요</string>
    <string name="current_food_guide">현재 급여하는 사료와 간식을\n입력해주세요.</string>
    <string name="feeding_hint">브랜드와 사료명을 함께 입력해주세요</string>
    <string name="feeding_snack_hint">급여중인 간식을 입력해주세요</string>
    <string name="dry_food">건식 사료</string>
    <string name="wet_food">습식 사료</string>
    <string name="snack">간식</string>
    <string name="dry_food_input_guide">건식 사료 정보 입력</string>
    <string name="wet_food_input_guide">습식 사료 정보 입력</string>
    <string name="snack_input_guide">간식 정보 입력</string>
    <string name="option_width_bracket">(선택)</string>
    <string name="food_sample">내추럴발란스</string>
    <string name="food_sickness_sub_guide">현재 치료 중이거나\n걱정되는 질병이 있다면 알려주세요.</string>
    <string name="food_sickness_sub_guide_option">※ 최대 3개 중복 선택 가능</string>
    <string name="food_search_done">진단결과 보러가기</string>
    <string name="food_recommend_progressing">등록하신 진단정보를 바탕으로\n데이터를 분석 중입니다.\n잠시 기다리시면 하나에게 최적화된\n맞춤형 사료를 추천해 드립니다.</string>
    <string name="food_recommend_progressing_1">진단정보 분석중</string>
    <string name="sickness_healthy">튼튼해요</string>
    <string name="sickness_joint">관절</string>
    <string name="sickness_skin">피모</string>
    <string name="sickness_stomach">소화</string>
    <string name="care_scanner_close_title">펫닥 스캐너 연결 종료</string>
    <string name="care_scanner_close_desc">종료 버튼을 누르시면\n펫닥 스캐너를 이용하실 수 없습니다.</string>
    <string name="care_scanner_close_confirm">종료</string>
</resources>