<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginStart="12dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/popup_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/fix_text_size_5"
        tools:text="@string/care_scanner_close_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/fix_text_size_3"
        tools:text="@string/care_scanner_close_desc"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/light_grey2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/fix_text_size_5"
            android:textColor="@color/blue_grey"
            android:textStyle="bold"
            android:text="@string/care_scanner_close_confirm"/>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            android:background="@color/light_grey2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buttonConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/fix_text_size_5"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/confirm"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>