<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/permission_guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/permission_guide_title"
        android:layout_marginTop="@dimen/permission_guide_title_margin"
        android:textSize="@dimen/fix_text_size_7"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_guide_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/permission_guide_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="gravity"
                android:gravity="start|center_vertical"
                android:text="@string/permission_guide_subtitle"
                android:layout_marginTop="@dimen/permission_guide_title_sub_margin"
                android:layout_marginStart="@dimen/permission_guide_padding"
                android:layout_marginEnd="@dimen/permission_guide_padding"
                android:textSize="@dimen/fix_text_size_4"
                android:lineSpacingExtra="@dimen/permission_guide_line_spacing"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/permission_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/permission_guide_padding"
                android:paddingEnd="@dimen/permission_guide_padding"
                android:paddingBottom="@dimen/permission_guide_sub_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permission_guide_subtitle"
                >
                <TextView
                    android:id="@+id/permission_guide_legacy_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    android:text="@string/legacy_permission"
                    android:textStyle="bold"
                    android:textSize="@dimen/fix_text_size_3"
                    />

                <!-- ======================================================================================== -->
                <ImageView
                    android:id="@+id/permission_guide_legacy_icon"
                    android:layout_width="@dimen/permission_guide_icon_height"
                    android:layout_height="@dimen/permission_guide_icon_height"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_legacy_title"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_legacy_title"
                    android:src="@drawable/legacy_permission"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/permission_guide_legacy_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/permission_guide_legacy_icon"
                    app:layout_constraintTop_toTopOf="@id/permission_guide_legacy_icon"
                    android:text="@string/legacy_title"
                    android:textSize="@dimen/fix_text_size_2"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_legacy_text1"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_legacy_text1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/permission_guide_legacy_icon"
                    android:text="@string/legacy_sub_title"
                    android:textSize="@dimen/fix_text_size_1"
                    android:textColor="@color/light_grey"
                    />

                <!-- ======================================================================================== -->

                <TextView
                    android:id="@+id/permission_guide_choice_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_legacy_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_legacy_icon"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin"
                    android:text="@string/choice_permission_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/fix_text_size_3"
                    />


                <!-- ======================================================================================== -->
                <ImageView
                    android:id="@+id/permission_guide_camera_icon"
                    android:layout_width="@dimen/permission_guide_icon_height"
                    android:layout_height="@dimen/permission_guide_icon_height"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_choice_title"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_choice_title"
                    android:src="@drawable/permission_camera_icon"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/permission_guide_camera_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/permission_guide_camera_icon"
                    app:layout_constraintTop_toTopOf="@id/permission_guide_camera_icon"
                    android:text="@string/permission_camera_text1"
                    android:textSize="@dimen/fix_text_size_2"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_camera_text1"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_camera_text1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/permission_guide_camera_icon"
                    android:text="@string/permission_camera_text2"
                    android:textSize="@dimen/fix_text_size_1"
                    android:textColor="@color/light_grey"
                    />

                <!-- ======================================================================================== -->
                <ImageView
                    android:id="@+id/permssion_guide_my_location_icon"
                    android:layout_width="@dimen/permission_guide_icon_height"
                    android:layout_height="@dimen/permission_guide_icon_height"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_camera_icon"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_camera_icon"
                    android:src="@drawable/permission_location_icon"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/permission_guide_location_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/permssion_guide_my_location_icon"
                    app:layout_constraintTop_toTopOf="@id/permssion_guide_my_location_icon"
                    android:text="@string/permission_location_text1"
                    android:textSize="@dimen/fix_text_size_2"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_location_text1"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_location_text1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/permssion_guide_my_location_icon"
                    android:text="@string/permission_location_text2"
                    android:textSize="@dimen/fix_text_size_1"
                    android:textColor="@color/light_grey"
                    />

                <!-- ======================================================================================== -->
                <ImageView
                    android:id="@+id/permission_guide_call_icon"
                    android:layout_width="@dimen/permission_guide_icon_height"
                    android:layout_height="@dimen/permission_guide_icon_height"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    app:layout_constraintTop_toBottomOf="@id/permssion_guide_my_location_icon"
                    app:layout_constraintStart_toStartOf="@id/permssion_guide_my_location_icon"
                    android:src="@drawable/permission_call_icon"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/permission_guide_call_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/permission_guide_call_icon"
                    app:layout_constraintTop_toTopOf="@id/permission_guide_call_icon"
                    android:text="@string/permission_call_text1"
                    android:textSize="@dimen/fix_text_size_2"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_call_text1"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_call_text1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/permission_guide_call_icon"
                    android:text="@string/permission_call_text2"
                    android:textSize="@dimen/fix_text_size_1"
                    android:textColor="@color/light_grey"
                    />

                <!-- ======================================================================================== -->
                <ImageView
                    android:id="@+id/permission_guide_noti_icon"
                    android:layout_width="@dimen/permission_guide_icon_height"
                    android:layout_height="@dimen/permission_guide_icon_height"
                    android:layout_marginTop="@dimen/permission_guide_sub_margin2"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_call_icon"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_call_icon"
                    android:src="@drawable/permission_noti_icon"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/permission_guide_noti_text1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toEndOf="@id/permission_guide_noti_icon"
                    app:layout_constraintTop_toTopOf="@id/permission_guide_noti_icon"
                    android:text="@string/permission_noti_text1"
                    android:textSize="@dimen/fix_text_size_2"
                    android:textColor="@color/dark_grey"
                    android:textStyle="normal"
                    android:layout_marginStart="3dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="@id/permission_guide_noti_text1"
                    app:layout_constraintTop_toBottomOf="@id/permission_guide_noti_text1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/permission_guide_noti_icon"
                    android:text="@string/permission_noti_text2"
                    android:textSize="@dimen/fix_text_size_1"
                    android:textColor="@color/light_grey"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey2"
                app:layout_constraintTop_toBottomOf="@+id/permission_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                />

            <TextView
                android:id="@+id/permission_guide_sub_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/light_grey"
                app:layout_constraintStart_toStartOf="@id/permission_guide_subtitle"
                app:layout_constraintEnd_toEndOf="@id/permission_guide_subtitle"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="120dp"
                android:textAlignment="gravity"
                android:gravity="start|center_vertical"
                android:layout_marginTop="9dp"
                android:text="@string/permission_guide_tail"
                android:textSize="@dimen/fix_text_size_2"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/permssion_guide_confirm_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_default"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:background="@drawable/orange_round_rect"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="@dimen/fix_text_size_5"
        android:text="@string/confirm"
        />

</androidx.constraintlayout.widget.ConstraintLayout>